@@ -54,8 +54,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,1,0,0
- PRODUCTVERSION 1,1,0,0
+ FILEVERSION 1,1,1,0
+ PRODUCTVERSION 1,1,1,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -73,7 +73,7 @@ BEGIN
             VALUE "Comments", "WinMerge plugin\0"
             VALUE "CompanyName", "\0"
             VALUE "FileDescription", "DisplayXMLFiles Module\0"
-            VALUE "FileVersion", "1, 1, 0, 0\0"
+            VALUE "FileVersion", "1, 1, 1, 0\0"
             VALUE "InternalName", "DisplayXMLFiles\0"
             VALUE "LegalCopyright", "Copyright 2003-2008\0"
             VALUE "LegalTrademarks", "\0"
@@ -81,7 +81,7 @@ BEGIN
             VALUE "OriginalFilename", "DisplayXMLFiles.DLL\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "DisplayXMLFiles Module\0"
-            VALUE "ProductVersion", "1, 1, 0, 0\0"
+            VALUE "ProductVersion", "1, 1, 1, 0\0"
             VALUE "SpecialBuild", "\0"
         END
     END
